preparing to publish dsp book version 0.01

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -1039,6 +1039,16 @@
   note         = {Systems design course of the Polytechnic Royal School; 1st Part: Algebraic analysis)},
   }
 
+@book{cauchy1823,
+  author       = {Augustin-Louis Cauchy},
+  title        = {R/'esum/'e des le/,cons donn/'ees /`a l'Ecole Royale Polytechnique sur le calcul infinit/'esimal},
+  address      = {Paris},
+  year         = {1823},
+  language     = {French},
+  url          = {https://books.google.com/books?id=m8RRAAAAcAAJ},
+  note         = {cross-reference \url{https://www.encyclopediaofmath.org/index.php/Cauchy_integral}},
+  }
+
 @book{cerda2010,
   title        = {Linear functional analysis},
   series       = {Graduate studies in mathematics},
