--- a/common/dspcalculus.tex
+++ b/common/dspcalculus.tex
@@ -99,7 +99,7 @@ Digital Differentiation Method \#1: \ope{Difference}\footnote{\citerpgc{williams
 %\newpage\mbox{} 
 %---------------------------------------
  
-Digital Differentiation = Continuous Differentiation?\footnote{\citerpgc{williams1986}{70}{9780132018562}{Figure 2.14(a)}}
+Is digital differentiation equivalent to continuous differentiation?\footnote{\citerpgc{williams1986}{70}{9780132018562}{Figure 2.14(a)}}
  
 \begin{align*}
   \abs{\frac{z-1}{z}}_{z=e^{i\omega}}
@@ -285,7 +285,18 @@ Digital Integration Method \#2: \opd{Trapezoid}
 %\newpage\mbox{} 
 %---------------------------------------
  
+\begin{figure}[h]
+  \centering
+  \begin{tabular}{|c|c|}
+    \hline
+    \includegraphics{graphics/IntSum.pdf}&\includegraphics{graphics/IntTrap.pdf}
+  \\summation integration & trapezoid integration
+  \\\hline
+  \end{tabular}
+  \caption{Comparison of digital integration methods to analytic integration\label{fig:dspint}}
+\end{figure}
 Is digital summation integration equivalent to continuous integration?
+Not really \xref{fig:dspint}.
 
 \begin{align*}
   \abs{\frac{z}{z-1}}_{z=e^{i\omega}}
@@ -297,17 +308,8 @@ Is digital summation integration equivalent to continuous integration?
 \end{align*}
 
 
-%---------------------------------------
-%\newpage\mbox{} 
-%---------------------------------------
-\includegraphics{graphics/IntSum.pdf}
-
-
-%---------------------------------------
-%\newpage\mbox{} 
-%---------------------------------------
- 
-Is digital trapezoid integration equivalent to continuous integration?
+Is digital trapezoid integration equivalent to continuous integration? 
+Not really \xref{fig:dspint}.
  
 \begin{align*}
   \abs{\frac{1}{2}\brp{\frac{z+1}{z-1}}}_{z=e^{i\omega}}
@@ -326,10 +328,6 @@ Is digital trapezoid integration equivalent to continuous integration?
 \end{align*}
 
 
-%---------------------------------------
-%\newpage\mbox{} 
-%---------------------------------------
-\includegraphics{graphics/IntTrap.pdf}
 
 
 
