--- a/common/integrat.tex
+++ b/common/integrat.tex
@@ -376,9 +376,9 @@ Let $\opK$ be a \prop{Fredholm operator} with kernel $\kappa(t,s)$ and adjoint $
      &= \inprod{\int_s \kappa(t,s) \ff(s) \dds}{\fg(t)}
      && \text{by left hypothesis}
    \\&= \int_s \ff(s) \inprod{\kappa(t,s)  }{\fg(t)} \dds
-     && \text{by additivity property of $\inprodn$ (\prefpo{def:inprod})}
+     && \text{by additivity property of $\inprodn$\ifsxref{vsinprod}{def:inprod}}
    \\&= \int_s \ff(s) \inprod{\fg(t)}{\kappa(t,s)}^\ast \dds
-     && \text{by conjugate symmetry property of $\inprodn$ (\prefpo{def:inprod})}
+     && \text{by conjugate symmetry property of $\inprodn$\ifsxref{vsinprod}{def:inprod}}
    \\&= \inprod{ \ff(s) }{\inprod{\fg(t)}{\kappa(t,s)} }
      && \text{by local definition of $\inprodn$}
    \\&= \inprod{ \ff(s) }{\mcom{\int_t \kappa^\ast(t,s) \fg(t) \dt}{$\brs{\opKa\fg}(s)$} }
