--- a/common/math/graphics/dsp/IntTrap.tex
+++ b/common/math/graphics/dsp/IntTrap.tex
@@ -37,10 +37,10 @@
    \psline(0.000000,3)(0.333333,3)%
    \psline(0.333333,3)(0.333333,0)%
    \psline(2,0.5)(2,0)%
-   \uput{2pt}[0](0.333333,3){\footnotesize$-0.93\%$ error}%
-   \uput{2pt}[0](0.5,2){\footnotesize$-2.1\%$ error}%
-   \uput{2pt}[45](1,1){\footnotesize$-8.5\%$}%
-   \uput{2pt}[0](3.1416,0.15){\footnotesize$-100\%$}%
+   \uput{2pt}[0](0.333333,3){$-0.93\%$ error}%
+   \uput{2pt}[0](0.5,2){$-2.1\%$ error}%
+   \uput{2pt}[45](1,1){$-8.5\%$}%
+   \uput{2pt}[0](3.1416,0.15){$-100\%$}%
   }
   %-------------------------------------
   % plots
