--- a/common/mra.tex
+++ b/common/mra.tex
@@ -37,7 +37,7 @@
   In 1989, St{/'e}phane G. Mallat introduced the \structe{Multiresolution Analysis} (MRA, \prefp{def:mra})
   method for wavelet construction. The MRA has become the dominate wavelet construction method.
   This text uses the MRA method extensively, 
-  and combines the MRA ``scaling subspaces" \xref{def:mra} with ``wavelet subspaces" \xref{def:seqWn} 
+  and combines the MRA ``scaling subspaces" \xref{def:mra} with ``wavelet subspaces"\ifsxref{wavstrct}{def:seqWn} 
   to form a subspace structure as represented by the 
   \structe{Hasse diagram} to the right.
   The \structe{Fast Wavelet Transform} combines both sets of subspaces as well, 
@@ -273,7 +273,7 @@ A multiresolution system, on the other hand, uses a generalized form of the scal
 \begin{dingautolist}{"AC}
   \item Instead of the scaling function simply being set \emph{equal to unity} ($\fphi(x)=1$),
         a multiresolution system \xref{def:mrasys} is often constructed in such a way that the scaling function 
-        $\fphi(x)$ forms a \hie{partition of unity} \xref{def:pun} such that
+        $\fphi(x)$ forms a \hie{partition of unity}\ifsxref{partuni}{def:pun} such that
         $\sum_{n\in\Z} \opTrn^n\fphi(x) = 1$.
   \item Instead of there being \emph{just one} scaling function, there
         is an entire sequence of scaling functions $\seqjZ{\opDil^j\fphi(x)}$, 
@@ -418,7 +418,7 @@ Proof for (2):
       \\&=   \lim_{j\to-\infty}\norm{\opP_j\lim_{n\to\infty}\seqn{\ff_n}}^2
         &&   \text{by \prefp{idef:mra_glb_ffn}}
       \\&\le \lim_{j\to-\infty}B\sum_{n\in\Z}\abs{\inprod{\opP_j\lim_{n\to\infty}\seqn{\ff_n}}{\opDil^j\opTrn^n\fphi}}^2
-        &&   \text{by \prope{frame property}} && \text{\xref{prop:rbasis_frame}}
+        &&   \text{by \prope{frame property}} && \text{\ifxref{frames}{prop:rbasis_frame}}
       \\&=   \lim_{j\to-\infty}B\sum_{n\in\Z}\abs{\inprod{\lim_{n\to\infty}\seqn{\ff_n}}{\opDil^j\opTrn^n\fphi}}^2
         &&   \text{by definition of $\opP_j$} && \text{\xref{idef:mra_glb_Pj}}
       \\&=   \lim_{j\to-\infty}B\sum_{n\in\Z}\abs{\inprod{\setind_\intcc{-R}{R}(x)\lim_{n\to\infty}\seqn{\ff_n}}{\opDil^j\opTrn^n\fphi(x)}}^2
@@ -464,8 +464,7 @@ Proof for (2):
   }
 \label{prop:mra_UVj}
 %--------------------------------------
-%Let $\spO\eqd\mrasys$.
-Let a \structe{Riesz sequence} be defined as in \prefp{def:rieszseq}.
+\mbox{}\\%Let a \structe{Riesz sequence} be defined as in \prefp{def:rieszseq}.
 \propbox{
   \brb{\begin{array}{FMD}
     (1). & $\seqn{\opTrn^n\fphi}$ is a \structe{Riesz sequence} &  and \\
@@ -555,7 +554,7 @@ Let a \structe{Riesz sequence} be defined as in \prefp{def:rieszseq}.
         &=   \lim_{j\to\infty}\norm{\opP_j\fg}^2
         &&   \text{by \prefp{ilem:mra_UVj_ge}}
       \\&\ge \lim_{j\to\infty}A\sum_{n\in\Z}\abs{\inprod{\opP_j\fg}{\opDil^j\opTrn^n\fphi}}^2
-        &&   \text{by \prope{frame property}} && \text{ \xref{prop:rbasis_frame}}
+        &&   \text{by \prope{frame property}} && \text{\ifxref{frames}{prop:rbasis_frame}}
       \\&=   \lim_{j\to\infty}A\sum_{n\in\Z}\abs{\inprod{\fg}{\opDil^j\opTrn^n\fphi}}^2
         &&   \text{by definition of $\opP_j$} && \text{ \xref{item:mra_UVj_Pj}}
       \\&=   \lim_{j\to\infty}A\sum_{n\in\Z}\abs{\inprod{\opFT\fg}{\opFT\opDil^j\opTrn^n\fphi}}^2
@@ -565,7 +564,7 @@ Let a \structe{Riesz sequence} be defined as in \prefp{def:rieszseq}.
       \\&=   \lim_{j\to\infty}A\sum_{n\in\Z}\abs{\inprod{\Fg(\omega)\Fphi^\ast(2^{-j}\omega)}{2^{-j/2}e^{-i2^{-j}\omega n}}}^2
         &&   \text{by property of $\inprodn$ in $\spLLR$}
       \\&=   \lim_{j\to\infty}A\norm{\Fg(\omega)\Fphi^\ast(2^{-j}\omega)}^2
-        &&   \text{by \thme{Parseval's Identity}} && \text{\xref{thm:fst}}
+        &&   \text{by \thme{Parseval's Identity}} && \text{\ifxref{frames}{thm:fst}}
       \\&=   A\norm{\Fg(\omega)\Fphi^\ast(0)}^2
         &&   \text{by left hypothesis (2)}
       \\&=   A\abs{\Fphi^\ast(0)}^2\,\norm{\Fg(\omega)}^2
@@ -891,7 +890,7 @@ Several functions in mathematics exhibit a kind of \prope{self-similar} or \prop
         \\\indentx$\ds\ff(x) = \ff(1)x - \ff(0)\opTrn x$.   %{$\setn{x,\,\opTrn x}$ is a \structe{basis} for $\clLcc$}$.
   \item If a function $\ff(x)$ is sufficiently \prope{bandlimited}, then the \structe{Cardinal series} \xref{ex:TD_cardinalseries} demonstrates
         \\\indentx$\ds\ff(x) = \sum_{n=1}^\infty \ff(n) \opTrn^n\frac{\sin\brs{\pi(x)}}{\pi(x)}$.
-  \item \fncte{B-splines} \xref{thm:bspline_recursion} are another example:
+  \item \fncte{B-splines}\ifsxref{spline}{thm:bspline_recursion} are another example:
         \\\indentx$\ds\fN_n(x)   = \frac{1}{n}x\fN_{n-1}(x) - \frac{1}{n}x\opTrn\fN_{n-1}(x) + \frac{n+1}{n}\opTrn\fN_{n-1}(x)  \qquad\scy\forall n\in\Znn\setd\setn{1},\,  \forall x\in\R$.
 \end{listi}
 
@@ -1035,13 +1034,15 @@ Let $\Dh(\omega)$ be the \fncte{Discrete time Fourier transform}\ifsxref{dsp}{de
       \\&= \opFTi\cwt\:\Dh\brp{\frac{\omega}{2}}\: \Fphi\brp{\frac{\omega}{2}}
         && \text{by (1)}
       \\&= \opFTi\cwt\:\sum_{n\in\Z}h_n e^{-i\frac{\omega}{2} n}\: \Fphi\brp{\frac{\omega}{2}}
-        && \text{by definition of \ope{DTFT} \xref{def:dtft}}
+        && \text{by definition of \ope{DTFT}}
+        &&\text{\xref{def:dtft}}
       \\&= \cwt\:\sum_{n\in\Z}h_n \opFTi e^{-i\frac{\omega}{2} n}\: \Fphi\brp{\frac{\omega}{2}}
         && \text{by property of linear operators}
       \\&= \cwt\:\sum_{n\in\Z}h_n \opFTi \opFT\opDil\opTrn^n\fphi
         && \text{by \prefp{prop:FTDf}}
       \\&= \sum_{n\in\Z}\fh_n \opDil\opTrn^n \fphi(x)
-        && \text{by definition of \ope{operator inverse}} && \text{\ifsxref{relation}{def:rel_inverse}}
+        && \text{by definition of \ope{operator inverse}}
+        && \text{\ifsxref{relation}{def:rel_inverse}}
     \end{align*}
 
   \item Proof that (1)$\implies$(2):
@@ -1238,7 +1239,7 @@ Let $\seqxZ{\fh_n}$ be a sequence of coefficients such that $\fphi = \sum_{n\in\
 \label{thm:V0Vn}
 %--------------------------------------
 Let $\mrasys$ be an \structe{MRA system} \xref{def:mrasys}.\\
-Let $\linspan\setA$ be the \structe{linear span} \xref{def:span} of a set $\setA$.
+Let $\linspan\setA$ be the \structe{linear span}\ifsxref{frames}{def:span} of a set $\setA$.
 \thmbox{
   \mcom{\linspan\setxZ{\opTrn^n\fphi}=\spV_0}
        {$\setxZ{\opTrn^n\fphi}$ is a \structe{basis} for $\spV_0$}
@@ -1265,7 +1266,7 @@ Let $\linspan\setA$ be the \structe{linear span} \xref{def:span} of a set $\setA
   \begin{align*}
     &\linspan\setxZ{\opDil^{j+1}\opTrn^n\fphi}
     \\&= \set{\ff\in\spLLR}{\exists \seqn{\alpha_n} \st \ff(x)=\sum_{n\in\Z}\alpha_n \opDil^{j+1}\opTrn^n\fphi}
-      && \text{by definition of $\linspan$} &&\text{\xref{def:span}}
+      && \text{by definition of $\linspan$} &&\text{\ifxref{frames}{def:span}}
     \\&= \set{\ff\in\spLLR}{\exists \seqn{\alpha_n} \st \ff(x)=\opDil\sum_{n\in\Z}\alpha_n \opDil^{j}\opTrn^n\fphi}
     \\&= \set{\ff\in\spLLR}{\exists \seqn{\alpha_n} \st \opDili\ff(x)=\sum_{n\in\Z}\alpha_n \opDil^{j}\opTrn^n\fphi}
     \\&= \mathrlap{
@@ -1273,7 +1274,7 @@ Let $\linspan\setA$ be the \structe{linear span} \xref{def:span} of a set $\setA
          }
     \\&= \opDil\set{\ff\in\spLLR}{\exists \seqn{\alpha_n} \st \ff(x)=\sum_{n\in\Z}\alpha_n \opDil^{j}\opTrn^n\fphi}
     \\&= \opDil\linspan\setxZ{\opDil^j\opTrn^n\fphi}
-      && \text{by definition of $\linspan$} &&\text{\xref{def:span}}
+      && \text{by definition of $\linspan$} &&\text{\ifxref{frames}{def:span}}
     \\&= \opDil\spV_j
       && \text{by induction hypothesis}
     \\&= \spV_{j+1}
@@ -1643,7 +1644,8 @@ Let $\mrasys$ be an \structe{MRA system} \xref{def:mrasys}.
 
 
 
-\pref{thm:gen_quadcon} (next) presents the \structe{quadrature necessary conditions} of a \structe{wavelet system}.
+%\pref{thm:gen_quadcon}
+\pref{thm:Sphi} (next) presents the \structe{quadrature necessary conditions} of a \structe{wavelet system}.
 These relations simplify dramatically in the special case of an
 \structe{orthonormal wavelet system} \xref{thm:oquadcon}.
 %--------------------------------------
@@ -1683,7 +1685,7 @@ Let $\Swphi(\omega)$ be the \fncte{auto-power spectrum} \xref{def:Swfg} of $\fph
 \begin{align*}
    &2\Sphi(2\omega)
    \\&= 2\brp{2\pi}\sum_{n\in\Z} \left|\Fphi(2\omega+2\pi n)\right|^2
-     && \text{by \prefp{thm:Swfg}}
+     && \ifdochas{pwrspec}{\text{by \prefp{thm:Swfg}}}
    \\&= 2\brp{2\pi}\sum_{n\in\Z} \left|\cwt \Dh\left(\frac{2\omega+2\pi n}{2}\right)\Fphi\left(\frac{2\omega+2\pi n}{2}\right)\right|^2
      && \text{by \prefp{lem:Fphi}}
    \\&= \mathrlap{
@@ -1702,7 +1704,7 @@ Let $\Swphi(\omega)$ be the \fncte{auto-power spectrum} \xref{def:Swfg} of $\fph
         \left|\Dh\left(\omega+\pi \right)\right|^2 \brp{2\pi\sum_{n\in\Z} \left|\Fphi\left(\omega+\pi+2\pi n\right)\right|^2}
    \\&= \left|\Dh\left(\omega     \right)\right|^2 \Sphi(\omega) +
         \left|\Dh\left(\omega+\pi \right)\right|^2 \Sphi(\omega+\pi)
-     && \text{by \prefp{thm:Swfg}}
+     && \ifdochas{pwrspec}{\text{by \prefp{thm:Swfg}}}
 \end{align*}
 
 %\end{enumerate}
@@ -1727,10 +1729,10 @@ to generate an \structe{MRA}; howbeit, this set results in the more restrictive 
 %--------------------------------------
 %Let an \structe{MRA} be defined as in \prefp{def:mra}.
 %Let a \structe{Riesz sequence} be defined as in \prefp{def:rieszseq}.
-Let $\spV_j\eqd\linspan\setxZ{\opTrn\fphi(x)}$ \xref{def:span}.
+Let $\spV_j\eqd\linspan\setxZ{\opTrn\fphi(x)}$\ifsxref{frames}{def:span}.
 \thmbox{
   \brb{\begin{array}{FMD}
-    (1). & $\seqn{\opTrn^n\fphi}$ is a \structe{Riesz sequence} \xref{def:rieszseq}    & and \\
+    (1). & $\seqn{\opTrn^n\fphi}$ is a \structe{Riesz sequence}\ifsxref{frames}{def:rieszseq}    & and \\
     (2). & $\ds\exists \seqn{\fh_n} \st \fphi(x)=\sum_{n\in\Z}h_n\opDil\opTrn^n\fphi(x)$ & and \\
     (3). & $\Fphi(\omega)$ is \prope{continuous} at $0$                                & and \\
     (4). & $\Fphi(0)\neq0$
@@ -2564,7 +2566,7 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
       \item Method 1: 
         Under the constraint of two non-zero scaling coefficients, 
         a scaling function design is fully constrained using the \hie{admissibility equation} \xref{thm:admiss} 
-        and the \hie{partition of unity} constraint \xref{def:pun}.
+        and the \hie{partition of unity} constraint\ifsxref{partuni}{def:pun}.
         The partition of unity formed by $\fphi(x)$ is illustrated in \prefpp{ex:n0_pounity}. %\prefp{ex:pounity_squarepulse}.
     
         Here are the equations:
@@ -2582,7 +2584,7 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
           %g_1 &= -h_0
         \end{align*}
     
-      \item Method 2: By \prefp{thm:Bsplineh}.
+      \ifdochas{spline}{\item Method 2: By \prefp{thm:Bsplineh}.}
     \end{enumerate}
 
 \ifdochas{compactp}{
