--- a/common/polynom.tex
+++ b/common/polynom.tex
@@ -1331,7 +1331,9 @@ $\alpha_n\in\R$.
 %--------------------------------------
 \begin{theorem}[Rolle's Theorem]
 \label{thm:zeros_rolle}
-\citep{korn}{18}
+\footnote{
+  \citerp{korn}{18}
+  }
 \index{Rolle's Theorem}
 \index{theorems!Rolle's Theorem}
 %--------------------------------------
@@ -1545,7 +1547,7 @@ but does not require any external theorem.
   \\&= x^{n+1} + y^{n+1} + \sum_{k=1}^{n} {n+1 \choose k} x^k y^{n+1-k}
   \\&= x^{n+1} + y^{n+1} 
      + \sum_{k=1}^{n} \left[ {n \choose k-1}+ {n \choose k} \right] x^k y^{n+1-k}
-    \qquad\text{by \thme{Pascal's Rule} \xref{thm:Pascals_Rule}}
+    \qquad\text{by \thme{Pascal's Rule} \ifxref{binomial}{thm:Pascals_Rule}}
   \\&= x^{n+1} + y^{n+1} 
      + \sum_{k=1}^{n} {n \choose k-1} x^k y^{n+1-k}
      + \sum_{k=1}^{n} {n \choose k  } x^k y^{n+1-k}
