--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -104,6 +104,7 @@
 \newboolean{preface}
 \newboolean{prob}
 \newboolean{prolatn}
+\newboolean{pwspace}
 \newboolean{pwrspec}
 \newboolean{random}
 \newboolean{relation}
