--- a/common/transop.tex
+++ b/common/transop.tex
@@ -436,7 +436,7 @@ Let $\opTrn$ and $\opDil$ be as in \prefp{def:opT}.
 %=======================================
 %\prefp{def:opT} defines the dilation operator $\opDil$ and translation operator $\opTrn$.
 In an inner product space\ifsxref{vsinprod}{def:inprod},
-every operator has an \hie{adjoint} \ifxref{operator}{prop:op_adjoint}
+every operator has an \ope{adjoint} \ifxref{operator}{prop:op_adjoint}
 and this adjoint is always itself an operator.
 In the case where the adjoint and inverse of an operator $\opU$ coincide,
 then $\opU$ is said to be \prope{unitary}\ifsxref{operator}{def:op_unitary}.
@@ -474,7 +474,7 @@ and $\opDil$    the \ope{dilation operator} with \ope{adjoint} $\hxs{\opDila}$\i
     &= \inprod{\fg(u)}{\opTrna\ff(u)}
     && \text{by change of variable $x\rightarrow u$}
   \\&= \inprod{\opTrn\fg(u)}{\ff(u)}
-    && \text{by definition of adjoint $\opTrna$}             && \text{\xref{def:adjoint}}
+    && \text{by definition of adjoint $\opTrna$}             && \text{\ifxref{operator}{def:adjoint}}
   \\&= \inprod{\fg(u-1)}{\ff(u)}
     && \text{by definition of $\opTrn$}                      && \text{\xref{def:opT}}
   \\&= \inprod{\fg(x)}{\ff(x+1)}
@@ -486,15 +486,15 @@ and $\opDil$    the \ope{dilation operator} with \ope{adjoint} $\hxs{\opDila}$\i
     &= \inprod{\fg(u)}{\opDila\ff(u)}
     && \text{by change of variable $x\rightarrow u$}   
   \\&= \inprod{\opDil\fg(u)}{\ff(u)}
-    && \text{by definition of $\opDila$}                     && \text{\xref{def:adjoint}}
+    && \text{by definition of $\opDila$}                     && \text{\ifxref{operator}{def:adjoint}}
   \\&= \inprod{\sqrt{2}\fg(2u)}{\ff(u)}
     && \text{by definition of $\opDil$}                      && \text{\xref{def:opD}}
   \\&= \int_{u\in\R} \sqrt{2}\fg(2u) \ff^\ast(u) \du
-    && \text{by definition of $\inprodn$}                    && \text{\xref{def:inprod}}
+    && \text{by definition of $\inprodn$}                    && \text{\ifxref{vsinprod}{def:inprod}}
   \\&= \int_{x\in\R} \fg(x) \brs{\sqrt{2}\ff\brp{\frac{x}{2}} \half }^\ast \dx
     && \text{where $x=2u$}
   \\&= \inprod{\fg(x)}{\cwt  \ff\brp{\frac{x}{2}}}
-    && \text{by definition of $\inprodn$}                    && \text{\xref{def:inprod}}
+    && \text{by definition of $\inprodn$}                    && \text{\ifxref{vsinprod}{def:inprod}}
   \\&\implies \opDila\ff(x)=\cwt \:\ff\brp{\frac{x}{2}}
 \end{align*}
 \end{proof}
@@ -568,7 +568,7 @@ Let $\opDil$ be the \fncte{dilation operator} \xref{def:opD}.
            \qquad\text{by \prope{constant} hypothesis}
       \\&= \norm{0}
       \\&= 0
-           \qquad\text{by \prope{nondegenerate} property of $\normn$} && \text{\xref{def:norm}}
+           \qquad\text{by \prope{nondegenerate} property of $\normn$} && \text{\ifxref{vsnorm}{def:norm}}
       \\&\le \varepsilon
       \\&\implies \forall h>0,\,\exists\varepsilon\st\norm{\ff(x)-\ff(x+h)}<\varepsilon
       \\&\iffdef  \text{$\ff(x)$ is \prope{continuous}}
