--- a/common/zcalc2.tex
+++ b/common/zcalc2.tex
@@ -38,7 +38,7 @@ Equation 1: Gain=1 at DC
   \\&= \brlr{G\brs{\frac{\brp{1+z^{-1}}^2}
                       {1 + az^{-1} + bz^{-2}}}}_{z=1}
   \\&= \frac{4G}{1 + a + b}
-    && \text{(see \prefpo{equ:trickdc})}
+   %&& \text{(see \prefpo{equ:trickdc})}
   \\&\implies \boxed{G = \frac{a + b + 1}{4}}
 \end{align*}
 \vfill 
@@ -53,7 +53,7 @@ Equation 2: Gain = $\sfrac{1}{2}$ at corner frequency
                       {1 + az^{-1} + bz^{-2}}}}^2_{z=e^{i\omega}}
   \\&=     {\frac{\ds\sum_{n=0}^{2}b_n^2 + 2\sum_{n=0}^{2}\ds\sum_{m=n+1}^{2} b_n b_m \cos\brs{\omega(n-m)}}
                  {\ds\sum_{n=0}^{2}a_n^2 + 2\sum_{n=0}^{2}\ds\sum_{m=n+1}^{2} a_n a_m \cos\brs{\omega(n-m)}}}
-    \qquad\text{(see \prefpo{equ:mr})}
+    %\qquad\text{(see \prefpo{equ:mr})}
   \\&=     G^2\brs{\frac{\ds\brp{1^2+2^2+1^2} + 2\brs{2\cos(\omega) + \cos(2\omega) + 2\cos(\omega)}}
                     {\ds\brp{1^2+a^2+b^2} + 2b\cos(2\omega) + 2a(b+1)\cos(\omega) + (1+a^2+b^2)}}
   \\&={G^2\brs{\frac{\ds2 \cos(2\omega) + 8\cos(\omega) + 6}
@@ -86,7 +86,7 @@ Equation 3: For more smoothness in passband, set 2nd derivative to 0:
                        }_{\omega=0}
      \qquad \implies \boxed{\brlr{\ff''\fg = \ff\fg''}_{\omega=0}}
 \end{align*}
-\ldots because $\ff'(0) = \fg'(0) = 0$ (see \prefpo{equ:mrflat})
+\ldots because $\ff'(0) = \fg'(0) = 0$ %(see \prefpo{equ:mrflat})
  
 { \begin{align*}
   &\implies \mcom{\brs{-8\cos(2\omega)-8\cos(\omega)}}
