--- a/common/zcalc2p.tex
+++ b/common/zcalc2p.tex
@@ -34,7 +34,7 @@ Equation 1: Gain=1 at DC
                   {z^2 - 2r\cos(\phi)z + r^2}}_{z=e^{i\omega},\,\omega=0}
   \\&= G\brs{\frac{1   + 2             + 1}
                   {1   - 2r\cos(\phi)  + r^2}}
-    && \text{(see \prefpo{equ:trickdc})}
+    %&& \text{(see \prefpo{equ:trickdc})}
   \\
   \\&\implies \boxed{G = \frac{r^2 - 2r\cos(\phi) + 1}{4}}
 \end{align*}
@@ -123,7 +123,7 @@ For an example, consider \ope{Hermite interpolation} \xxref{sec:interpo_hermite}
                        }_{\omega=0}
      \qquad \implies \boxed{\brlr{\ff''\fg = \ff\fg''}_{\omega=0}}
 \end{align*}
-\ldots because $\ff'(0) = \fg'(0) = 0$ (see \prefpo{equ:mrflat})
+\ldots because $\ff'(0) = \fg'(0) = 0$ %(see \prefpo{equ:mrflat})
 
 
 
@@ -168,7 +168,7 @@ $\begin{array}{rc>{\ds}l}
                   {z^2 - 2r\cos(\phi)z + r^2}}_{z=e^{i\omega},\,\omega=0}
   \\&= G\brs{\frac{1   + 2             + 1}
                   {1   - 2r\cos(\phi)  + r^2}}
-    && \text{(see \prefpo{equ:trickdc})}
+    %&& \text{(see \prefpo{equ:trickdc})}
   \\
   \\&\implies \boxed{G = \frac{r^2 - 2r\cos(\phi) + 1}{4}}
   \\
