--- a/common/math/graphics/dsp/IntSum.tex
+++ b/common/math/graphics/dsp/IntSum.tex
@@ -37,10 +37,10 @@
    \psline(0.000000,3)(0.333333,3)%
    \psline(0.333333,3)(0.333333,0)%
    \psline(2,0.5)(2,0)%
-   \uput{2pt}[0](0.333333,3){\footnotesize$0.46\%$ error}%
-   \uput{2pt}[0](0.5,2){\footnotesize$1.0\%$ error}%
-   \uput{2pt}[45](1,1){\footnotesize$4.3\%$}%
-   \uput{2pt}[0](3.1416,0.41){\footnotesize$57\%$}%
+   \uput{2pt}[0](0.333333,3){$0.46\%$ error}%
+   \uput{2pt}[0](0.5,2){$1.0\%$ error}%
+   \uput{2pt}[45](1,1){$4.3\%$}%
+   \uput{2pt}[0](3.1416,0.41){$57\%$}%
   }
   %-------------------------------------
   % plots
