--- a/common/math/graphics/dsp/cendiff.tex
+++ b/common/math/graphics/dsp/cendiff.tex
@@ -37,10 +37,10 @@
    \psline(0,1)(1,1)\psline(1,1)(1,0)%
    \psline(0,2)(2,2)\psline(2,2)(2,0)%
    \psline(0,3.1416)(3.1416,3.1416)\psline(3.1416,3.1416)(3.1416,0)%
-   \rput[tl](3,3){\footnotesize$-100\%$}% error at pi
-   \uput{2pt}[20](2,2){\footnotesize$-54.5\%$ error}%
-   \rput[tl](1,1){\footnotesize$-15.9\%$ error}%
-   \uput{3mm}[20](0,0){\footnotesize$0\%$ error}%
+   \rput[tl](3,3){$-100\%$}% error at pi
+   \uput{2pt}[20](2,2){$-54.5\%$ error}%
+   \rput[tl](1,1){$-15.9\%$ error}%
+   \uput{3mm}[20](0,0){$0\%$ error}%
   }
   %-------------------------------------
   % end
