--- a/common/math/graphics/vecres.tex
+++ b/common/math/graphics/vecres.tex
@@ -5,7 +5,7 @@
 % nominal unit = 30mm
 % nominal font size = gsize
 %============================================================================
-\begin{pspicture}(-1.25,-1.25)(1.7,1.5)%
+\begin{pspicture}(-1.25,-1.25)(1.7,1.25)%
   %-------------------------------------
   % nodes
   %-------------------------------------
@@ -20,6 +20,8 @@
   % axes
   %-------------------------------------
   \psaxes[linecolor=axis,linewidth=0.75pt,labels=none]{<->}(0,0)(-1.25,-1.25)(1.25,1.25)%
+  \uput{1.3}[0](origin){\color{axis}$\scy\Reb{z}$}%
+  \uput{1.3}[0](0,1.2){\color{axis}$\scy\Imb{z}$}%
   %-------------------------------------
   % plot
   %-------------------------------------
@@ -29,8 +31,6 @@
   %-------------------------------------
   % labels
   %-------------------------------------
-  \uput{1.3}[0](origin){\color{axis}$\scy\Reb{z}$}%
-  \uput{1.3}[90](origin){\color{axis}$\scy\Imb{z}$}%
   %\rput[tl](-1.3,1.5){\rnode[b]{circleL}{$z=e^{i\omega}$}}% circle label
   \rput[br](circleP){\rnode[b]{circleL}{$z=e^{i\omega}$}}% circle label
   %-------------------------------------
