final updates before releasing DSP book version 0.01

--- a/common/integrat.tex
+++ b/common/integrat.tex
@@ -26,11 +26,11 @@
   }
 %---------------------------------------
 \begin{definition}
-\label{def:intR}
 \citetbl{
   \citerp{jahnke2003}{262},
   \citor{cauchy1823}
   }
+\label{def:cintop}
 \index{integral operators!Cauchy}
 %---------------------------------------
 Let $\ms$ be a measure space.
@@ -48,11 +48,11 @@ of a set $\setE\subseteq\setX$.
 
 %---------------------------------------
 \begin{definition}
-\label{def:intR}
 \citetbl{
   \citerp{jahnke2003}{264},
   \citor{riemann1854}
   }
+\label{def:intR}
 \index{integral operators!Riemann}
 %---------------------------------------
 Let $\ms$ be a measure space.
@@ -276,29 +276,15 @@ and calculated below:
 \index{functions!Dirichlet monster}
 %---------------------------------------
 \exbox{
-  \ff(x) \eqd \left\{\begin{array}{ll}
+  \ff(x) \eqd \brb{\begin{array}{ll}
     0 & \text{for $x$ rational} \\
     1 & \text{for $x$ irrational}
-  \end{array}\right.
+  \end{array}}
   \qquad\implies\qquad
-  \text{$\ff$ is not Riemann integrable}
+  \brb{\text{$\ff$ is \emph{not} Riemann integrable}}
   }
 \end{example}
 
-%---------------------------------------
-\begin{definition}
-\label{def:spLLR}
-%---------------------------------------
-Let $\int_\setA \ff \dmu$ be the \structe{Lebesgue integral} on a \structe{measure space} $\ms$.
-\defbox{\begin{array}{M}
-  The space $\spLLR$ is defined as
-  \\\indentx$\ds\set{\ff\in\clFrr}{\int_\R \abs{\ff(x)}^2 \dmu < \infty}$
-\end{array}}
-\end{definition}
-
-%=======================================
-%\section{Fredholm integral operators}
-%=======================================
 %---------------------------------------
 \begin{definition}
 \label{def:op_int}
@@ -318,15 +304,13 @@ Let $\int_\setA \ff \dmu$ be the \structe{Lebesgue integral} on a \structe{measu
   \end{array}}
 \footnotetext{
    The equation $\int_u \kappa(t,s) \ff(s) \dd{s}$ is a 
-   \hid{Fredholm integral equation of the first kind} and
+   \fnctd{Fredholm integral equation of the first kind} and
    $\kappa(t,u)$ is the {\bf kernel} of the equation.
-   References: \\
-   \begin{tabular}{l}
-     \citer{fredholm1900} \\
-     \citerp{fredholm1903}{365} \\
-     \citerp{michel1993}{97} \\
+   References: 
+     \citer{fredholm1900},
+     \citerp{fredholm1903}{365},
+     \citerp{michel1993}{97},
      \citerp{keener}{101}
-   \end{tabular}
    }
 \end{definition}
 
