--- a/common/interpo.tex
+++ b/common/interpo.tex
@@ -113,7 +113,7 @@ $P=\{(-2,1),\; (-1,3),\; (3,2),\; (5,4)\}$ is
   }
 \index{polynomial!Newton}
 %--------------------------------------
-The \hid{Newton polynomial} $N_{P,n}(x)$ with respect to the $n+1$ points
+The \hid{Newton polynomial} $N_{P,n}(x)$ with respect to the $n+1$ points\\
 $P=\set{(x_k,y_k)}{k=0,1,2,\ldots,n}$ is defined as
 \defbox{
   N_{P,n}(x) \eqd \sum_{k=0}^n \alpha_k \prod_{m=0}^k (x-x_m)
@@ -605,8 +605,8 @@ Then, using \thme{Least squares}\ifsxref{estimate}{thm:ls}, the best coefficient
   \label{fig:lphp}
   }
 \end{figure}
-\prefpp{lem:quadcon_y} expresses the quadrature condition
-as a polynomial in $y=\sin^2\frac{\omega}{2}$.
+The  quadrature condition can be expressed as a polynomial 
+in $y=\sin^2\frac{\omega}{2}$\ifsxref{compactp}{lem:quadcon_y}.
 The first term in this polynomial quadrature condition is a
 low-pass response and the second term is a high pass;
 and they meet in the middle at $\omega=\frac{\pi}{2}$.
@@ -765,7 +765,7 @@ Let
 \end{proof}
 
 
-\ifdochasnot{pwspace}{\input{../common/pwspace.tex}}
+\ifdochasnot{sampling}{\input{../common/pwspace.tex}}
 
 
 
