--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -109,6 +109,7 @@
 \newboolean{random}
 \newboolean{relation}
 \newboolean{relneg}
+\newboolean{sampling}
 \newboolean{series}
 \newboolean{seq}
 \newboolean{setstrct}
